--- a/ModuleLoaderMod.csproj
+++ b/ModuleLoaderMod.csproj
@@ -95,7 +95,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NuterraSteam\TTBlockReferences.cs" />
+    <Compile Include="NuterraSteam\NuterraDeserializer.cs" />
+    <Compile Include="NuterraSteam\TTReferences.cs" />
+    <Compile Include="NuterraSteam\Util.cs" />
     <Compile Include="NuterraUnofficial\BlockExamples.cs" />
     <Compile Include="NuterraUnofficial\BlockLoader.cs" />
     <Compile Include="NuterraUnofficial\BlockPrefabBuilder.cs" />
@@ -107,7 +109,7 @@
     <Compile Include="NuterraUnofficial\CustomTechComponents.cs" />
     <Compile Include="NuterraUnofficial\DirectoryBlockLoader.cs" />
     <Compile Include="NuterraUnofficial\DirectoryCorpLoader.cs" />
-    <Compile Include="NuterraUnofficial\GameObjectExtensions.cs" />
+    <Compile Include="NuterraSteam\GameObjectExtensions.cs" />
     <Compile Include="NuterraUnofficial\JsonToGameObject.cs" />
     <Compile Include="NuterraUnofficial\ModuleFirstPersonView.cs" />
     <Compile Include="NuterraUnofficial\NetCameras.cs" />
@@ -121,7 +123,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="NuterraUnofficial\ReferenceFinder.cs" />
     <Compile Include="NuterraUnofficial\ReflectionHelper.cs" />
     <Compile Include="NuterraUnofficial\UnstableSupport_RemoveWhenStable.cs" />
   </ItemGroup>
