Seems to work. Tested on LK Baroness

--- a/ModuleLoaderMod.csproj
+++ b/ModuleLoaderMod.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{07C38623-B432-48A7-A803-8525530927C1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CustomBlocks</RootNamespace>
-    <AssemblyName>MyModuleLoader</AssemblyName>
+    <RootNamespace>CustomModules</RootNamespace>
+    <AssemblyName>TTQMMTest</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -98,33 +98,15 @@
     <Compile Include="NuterraSteam\NuterraDeserializer.cs" />
     <Compile Include="NuterraSteam\TTReferences.cs" />
     <Compile Include="NuterraSteam\Util.cs" />
-    <Compile Include="NuterraUnofficial\BlockExamples.cs" />
-    <Compile Include="NuterraUnofficial\BlockLoader.cs" />
-    <Compile Include="NuterraUnofficial\BlockPrefabBuilder.cs" />
-    <Compile Include="NuterraUnofficial\CustomBlock.cs" />
-    <Compile Include="NuterraUnofficial\CustomCorporation.cs" />
-    <Compile Include="NuterraUnofficial\CustomModules.cs" />
-    <Compile Include="NuterraUnofficial\CustomModulesConsumeToShell.cs" />
-    <Compile Include="NuterraUnofficial\CustomRecipe.cs" />
-    <Compile Include="NuterraUnofficial\CustomTechComponents.cs" />
-    <Compile Include="NuterraUnofficial\DirectoryBlockLoader.cs" />
-    <Compile Include="NuterraUnofficial\DirectoryCorpLoader.cs" />
     <Compile Include="NuterraSteam\GameObjectExtensions.cs" />
-    <Compile Include="NuterraUnofficial\JsonToGameObject.cs" />
-    <Compile Include="NuterraUnofficial\ModuleFirstPersonView.cs" />
-    <Compile Include="NuterraUnofficial\NetCameras.cs" />
-    <Compile Include="NuterraUnofficial\NetHandler.cs" />
     <Compile Include="NuterraSteam\NuterraMod.cs" />
     <Compile Include="NuterraSteam\NuterraModuleLoader.cs" />
-    <Compile Include="NuterraUnofficial\ObjImporter.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="NuterraUnofficial\ReflectionHelper.cs" />
-    <Compile Include="NuterraUnofficial\UnstableSupport_RemoveWhenStable.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
