--- a/ModuleLoaderMod.csproj
+++ b/ModuleLoaderMod.csproj
@@ -37,8 +37,9 @@
     <Reference Include="0Harmony">
       <HintPath>E:\Steam\steamapps\common\TerraTech Beta\TerraTechWin64_Data\Managed\0Harmony.dll</HintPath>
     </Reference>
-    <Reference Include="Assembly-CSharp">
-      <HintPath>..\Assembly-CSharp.dll</HintPath>
+    <Reference Include="Assembly-CSharp, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>E:\Steam\steamapps\common\TerraTech Beta\TerraTechWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>E:\Steam\steamapps\common\TerraTech Beta\TerraTechWin64_Data\Managed\Newtonsoft.Json.dll</HintPath>
