Add rudimentary wrapper around logging, more leniency in JSON parsing

--- a/ModuleLoaderMod.csproj
+++ b/ModuleLoaderMod.csproj
@@ -101,7 +101,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NuterraSteam\CustomParser.cs" />
     <Compile Include="NuterraSteam\LegacyModule\ModuleCustomBlock.cs" />
+    <Compile Include="NuterraSteam\LoggingWrapper.cs" />
     <Compile Include="NuterraSteam\NuterraDeserializer.cs" />
     <Compile Include="NuterraSteam\TTReferences.cs" />
     <Compile Include="NuterraSteam\Util.cs" />
