--- a/ModuleLoaderMod.csproj
+++ b/ModuleLoaderMod.csproj
@@ -103,7 +103,7 @@
   <ItemGroup>
     <Compile Include="NuterraSteam\CustomParser.cs" />
     <Compile Include="NuterraSteam\LegacyModule\ModuleCustomBlock.cs" />
-    <Compile Include="NuterraSteam\LoggingWrapper.cs" />
+    <Compile Include="NuterraSteam\Logger.cs" />
     <Compile Include="NuterraSteam\NuterraDeserializer.cs" />
     <Compile Include="NuterraSteam\TTReferences.cs" />
     <Compile Include="NuterraSteam\Util.cs" />
